<resources>
    <string name="app_name">Panoramic</string>
    <string name="logo">LOGO</string>
    <string name="login_username">نام کاربری</string>
    <string name="login_password">رمز عبور</string>
    <string name="login_button">ورود</string>
    <string name="singup_button">ثبت نام</string>
    <string name="forget_password">رمز عبور را فراموش کردید ؟</string>
    <string name="contact_us">تماس با ما</string>
    <string name="top_seller">برترین فروشندگان</string>
    <string name="awards_guide">راهنمای جوایز</string>
    <string name="personal_information">اطلاعات شخصی</string>
    <string name="welcome_text">صبح به خیر</string>
    <string name="username_home">نام کاربری</string>
    <string name="your_score_text">امتیاز شما:</string>
    <string name="click_for_more_info_reward">جهت اطلاع از جزئیات بیشتر، اینجا را لمس کنید</string>
    <string name="register_new_product_text">ثبت محصول جدید</string>
    <string name="last_registered_product">آخرین محصول ثبت شده شما :</string>
    <string name="educational_videos_title_text">ویدیو های آموزشی</string>
    <string name="number_of_unseen_videos">تعداد ویدیو های مشاهده نشده :</string>
    <string name="announcements_text">اطلاعیه ها</string>
    <string name="unread_notices">اطلاعیه های خوانده نشده :</string>
    <string name="register_product_Inquiry">استعلام کالا</string>
    <string name="register_product_rolls_title">شرایط و قوانین :</string>
    <string name="register_product_barcode_text">بارکد</string>
    <string name="register_product_barcode_input_hint">سریال دستگاه</string>
    <string name="register_product_phone_input_text">شماره موبایل مصرف کننده</string>
    <string name="register_product_name_input_text">نام و نام خانوادگی مصرف کننده</string>
    <string name="register_product_title_text">لطفا اطلاعات زیر را کامل کنید :</string>
    <string name="home_page">خانه</string>
    <string name="call_center_text">ضمن تشکر از ثبت نام شما، اوپراتور های ما ظرف حداکثر 72 ساعت جهت احراز هویت با شما تماس خواهند گرفت</string>
    <string name="call_center_home_link">جهت ورود، اینجا را لمس کنید</string>
    <string name="new_password">رمز عبور جدید</string>
    <string name="re_enter_new_password">تکرار رمز عبور جدید</string>
    <string name="coin">coin</string>
    <string name="register_new_product">register new product</string>
    <string name="educational_videos_image">educational videos image</string>
    <string name="announcements_image">announcements image</string>
    <string name="model_number">شماره مدل :</string>
    <string name="size">سایز :</string>
    <string name="type">نوع :</string>
    <string name="resolotion">رزولوشن :</string>
    <string name="serial_number">شماره سریال :</string>
    <string name="confirm_text">آیا صحت اطلاعات بالا را تایید میکنید ؟</string>
    <string name="confirm_button">تایید و ثبت</string>
    <string name="edite_button">ویرایش اطلاعات</string>
    <string name="cover">cover</string>
    <string name="flash_light">flash light</string>
    <string name="play">play</string>
    <string name="confirm">ثبت</string>
    <string name="enter_phone_number">لطفا شماره تلفن همراه خود را وارد کنید</string>
    <string name="phone_number">شماره همراه</string>
    <string name="confirm_phone_button">تایید</string>
    <string name="enter_sms_code">لطفا کد پیامک شده را وارد کنید</string>
    <string name="resend_code">جهت ارسال مجدد کد، اینجا را لمس کنید</string>
    <string name="name">نام</string>
    <string name="family">نام خانوادگی</string>
    <string name="email">آدرس رایانامه (ایمیل)</string>
    <string name="phone">شماره تلفن همراه</string>
    <string name="shop_name">نام فروشگاه</string>
    <string name="shop_owner">نام مالک فروشگاه</string>
    <string name="shop_zip">کد پستی فروشگاه</string>
    <string name="next_page">صفحه ی بعد</string>
    <string name="national_id">کدملی</string>
    <string name="home_address">آدرس منزل</string>
    <string name="home_phone">شماره تلفن منزل</string>
    <string name="marital_status">وضعیت تاهل</string>
    <string name="chile_number">تعداد فرزندان</string>
    <string name="home_zip">کدپستی منزل</string>
    <string name="card_number">شماره کارت</string>
    <string name="account_number">شماره حساب</string>
    <string name="shaba_number">شماره شبا</string>
    <string name="bank_name">نام بانک</string>
    <string name="call_center_image">Call Center Image</string>
    <string name="panel">پنل :</string>
    <string name="log_out">خروج</string>
    <string name="contact_us_text">فروشندگان محترم، لطفا جهت تغییر اطلاعات شخصی خود، و یا مشاهده هرگونه مشکلی در اپلیکیشن، لطفا از طریق تماس با شماره های 021-22879855 ، 021-22879792 یا از طریق واتساپ 09129583214 با ما در میان بگذارید</string>
    <string name="shop_address">آدرس فروشگاه</string>
    <string name="age">سن</string>
    <string name="education">تحصیلات</string>
    <string name="regen">شهر</string>
    <string name="guid_register_product">شما میـتوانید میزان امتـیاز هر دستـگاه را در صفحـه .\"راهنمای جوایز\" مشاهده کنید</string>
    <string name="guid_register_product_2">امتیازات کالا، پس از تایید نمایندگی پس از فروش برای .شما اعمال میگردد</string>
    <string name="state">استان</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>