<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".app.ui.singup.PhoneFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:importantForAutofill="noExcludeDescendants">


            <TextView
                android:id="@+id/phone_text"
                style="@style/baseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/enter_phone_number"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/phone_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.13" />

            <EditText
                android:id="@+id/phone_input"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:background="@drawable/login_input_background"
                android:ems="11"
                android:gravity="right|center"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxEms="11"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/textInputColor"
                android:textColorHint="@color/textInputColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints,RtlHardcoded" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/phone_button"
                style="@style/baseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button"
                android:text="@string/confirm_phone_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_input"
                app:layout_constraintVertical_bias="0.72" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>