<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".app.ui.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAutofill="noExcludeDescendants">

            <EditText
                android:id="@+id/new_password"
                android:layout_width="228.7dp"
                android:layout_height="36.7dp"
                android:background="@drawable/login_input_background"
                android:ems="10"
                android:gravity="right|center"
                android:hint="@string/new_password"
                android:inputType="textPersonName"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/textInputColor"
                android:textColorHint="@color/textInputColor"
                app:layout_constraintBottom_toTopOf="@+id/renew_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.49"
                app:layout_constraintVertical_chainStyle="packed"
                tools:ignore="RtlHardcoded,TextFields" />

            <EditText
                android:id="@+id/renew_password"
                android:layout_width="228.7dp"
                android:layout_height="36.7dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/login_input_background"
                android:ems="10"
                android:gravity="right|center"
                android:hint="@string/re_enter_new_password"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/textInputColor"
                android:textColorHint="@color/textInputColor"
                app:layout_constraintBottom_toTopOf="@+id/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_password"
                app:layout_constraintVertical_chainStyle="packed"
                tools:ignore="RtlHardcoded" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login"
                android:layout_width="106dp"
                android:layout_height="45.3dp"
                android:background="@drawable/login_button"
                android:text="@string/login_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.9" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>